🔨 patch: fix text center align at footer

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -16,6 +16,8 @@
   justify-content: center;
   margin: .89rem 0;
 
+  text-align: center;
+
   &Carousel {
     display: flex;
     flex-direction: row;
